--- a/install-db/tasks/configure.yml
+++ b/install-db/tasks/configure.yml
@@ -3,6 +3,7 @@
   mysql_db:
     name: wp_db_prd
     state: present
+  when: ansible_facts['distribution'] == "CentOS"
 
   
 
@@ -13,3 +14,4 @@
     priv: 'wp_db_prd.*:ALL,GRANT'
     host: "%"
     state: present
+  when: ansible_facts['distribution'] == "CentOS"
