--- a/install-wp/vars/main.yml
+++ b/install-wp/vars/main.yml
@@ -1,2 +1,8 @@
 ---
 # vars file for install-wp
+dbuser: wp_user_01
+dbpass: "dbpass12@"
+dbname: wp_db_prd
+dbhost: 192.168.1.10
+dbport: 3306
+http_port:  8080
