--- a/monitoring/defaults/main.yml
+++ b/monitoring/defaults/main.yml
@@ -16,6 +16,8 @@ prometheus_install_path: /opt/prometheus
 prometheus_config_path: /etc/prometheus
 prometheus_db_path: /var/lib/prometheus
 
+prometheus_rule_path: "{{ prometheus_config_path }}/rules"
+
 
 ########### Uso interno ###################
 
