--- a/monitoring/defaults/main.yml
+++ b/monitoring/defaults/main.yml
@@ -40,9 +40,9 @@ v{{ prometheus_node_exporter_version }}/node_exporter-{{ prometheus_node_exporte
 
 ############# Grafana ##################
 
-grafana_apt_key: https://packagecloud.io/gpg.key
-grafana_apt_repo: https://packages.grafana.com/oss/rpm
-
+grafana_apt_key: https://packages.grafana.com/gpg.key
+grafana_apt_repo: deb https://packages.grafana.com/oss/deb stable main
+                  
 grafana_user: grafana
 grafana_group: grafana
 
