--- a/monitoring/tasks/main.yml
+++ b/monitoring/tasks/main.yml
@@ -28,6 +28,9 @@
   include_tasks: install-prometheus.yml
   when: "'prometheus' in components"
 
+- name: install Alert Manager
+  include_tasks: install-alertmanager.yml
+
 - name: install node_exporter
   include_tasks: install-node-exporter.yml
   when: "'node_exporter' in components"
