--- a/monitoring/meta/main.yml
+++ b/monitoring/meta/main.yml
@@ -14,7 +14,7 @@ galaxy_info:
 
   galaxy_tags:
     - system
-    - alert-manager
+    - alertmanager
     - monitoring
     - grafana
     - prometheus
