--- a/monitoring/files/alert-rules.yml
+++ b/monitoring/files/alert-rules.yml
@@ -1,11 +1,11 @@
 groups:
-- name: alert.rules
+- name: general
   rules:
   - alert: InstanceDown
     expr: up == 0
     for: 1m
     labels:
-      severity: "critical"
+      severity: warning
     annotations:
       summary: "Endpoint {{ $labels.instance }} down"
       description: "{{ $labels.instance }} of job {{ $labels.job }} has been down for more than 1 minutes."
