--- a/monitoring/files/alert-rules.yml
+++ b/monitoring/files/alert-rules.yml
@@ -9,3 +9,14 @@ groups:
     annotations:
       summary: "Endpoint {{ $labels.instance }} down"
       description: "{{ $labels.instance }} of job {{ $labels.job }} has been down for more than 1 minutes."
+  
+  - alert: NodeCPUUsageWarning
+    expr: (100 - (avg(irate(node_cpu{mode="idle",name="node-exporter"}[5m])) BY (instance)
+      * 100)) > 75
+    for: 3m
+    labels:
+      severity: warning
+    annotations:
+      DESCRIPTION: '{{$labels.instance}}: CPU usage is above 75% (current value is:
+        {{ $value }})'
+      SUMMARY: '{{$labels.instance}}: High CPU usage detected'
