--- a/monitoring/defaults/main.yml
+++ b/monitoring/defaults/main.yml
@@ -42,6 +42,9 @@ v{{ prometheus_node_exporter_version }}/node_exporter-{{ prometheus_node_exporte
 
 grafana_apt_key: https://packages.grafana.com/gpg.key
 grafana_apt_repo: deb https://packages.grafana.com/oss/deb stable main
+
+grafana_port: 3000
+grafana_host: "{{ ansible_nodename }}"
                   
 grafana_user: grafana
 grafana_group: grafana
@@ -54,7 +57,6 @@ grafana_data_path: "/var/lib/grafana"
 grafana_log_path: "/var/log/grafana"
 grafana_plugins_path: "{{ grafana_data_path }}/plugins"
 grafana_dashboards_path: "{{ grafana_data_path }}/dashboards"
-grafana_port: 3000
 
 # Banco de dados
 grafana_database:
