--- a/monitoring/tasks/main.yml
+++ b/monitoring/tasks/main.yml
@@ -30,6 +30,7 @@
 
 - name: install Alert Manager
   include_tasks: install-alertmanager.yml
+  when: "'alertmanager' in components"
 
 - name: install node_exporter
   include_tasks: install-node-exporter.yml
