--- a/monitoring/tests/monitoring_start.yml
+++ b/monitoring/tests/monitoring_start.yml
@@ -15,7 +15,7 @@
   - name: start node_exporter
     systemd: name=node_exporter state=started
 
-- hosts: all
+- hosts: master
   become: True
   tasks:
   - name: start Prometheus server
