--- a/monitoring/tasks/install-prometheus.yml
+++ b/monitoring/tasks/install-prometheus.yml
@@ -35,10 +35,10 @@
     src: "rules.yml"
     dest: "{{ prometheus_rule_path }}/"
 
-- name: Alert config file
-  copy:
-    src: "alert-rules.yml"
-    dest: "{{ prometheus_rule_path }}/"
+# - name: Alert config file
+#   copy:
+#     src: "alert-rules.yml"
+#     dest: "{{ prometheus_rule_path }}/"
 
 - name: copy Prometheus systemd config to server
   template:
