--- a/monitoring/tasks/main.yml
+++ b/monitoring/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 #
-# Arquivos main.yml teste
+# file: tasks/main.yml
 #
 
 - name: create Prometheus group
@@ -27,10 +27,6 @@
 - name: install Prometheus
   include_tasks: install-prometheus.yml
   when: "'prometheus' in components"
-
-# - name: install Alert Manager
-#   include_tasks: install-alertmanager.yml
-#   when: "'alertmanager' in components"
 
 - name: install node_exporter
   include_tasks: install-node-exporter.yml
