--- a/monitoring/tasks/install-prometheus.yml
+++ b/monitoring/tasks/install-prometheus.yml
@@ -1,7 +1,6 @@
-  
 ---
 #
-# file: tasks/install-prometheus.yml
+# Instalação prometheus
 #
 
 - name: download and untar Prometheus tarball
@@ -13,7 +12,7 @@
     group: "{{ prometheus_group }}"
   tags:
     - tar
-
+    
 - name: create Prometheus server directories
   file:
     path: "{{ item }}"
@@ -36,8 +35,14 @@
     src: "rules.yml"
     dest: "{{ prometheus_rule_path }}/"
 
+- name: Alert config file
+  copy:
+    src: "alert-rules.yml"
+    dest: "{{ prometheus_rule_path }}/"
+
 - name: copy Prometheus systemd config to server
   template:
     src: "prometheus.service.j2"
     dest: "/etc/systemd/system/prometheus.service"
     mode: "a+x"
+
