--- a/monitoring/tests/monitoring_start.yml
+++ b/monitoring/tests/monitoring_start.yml
@@ -24,5 +24,12 @@
 - hosts: master
   become: True
   tasks:
+  - name: start AlertManager server
+    systemd: name=alertmanager state=started
+
+- hosts: master
+  become: True
+  tasks:
   - name: start Grafana server
     systemd: name=grafana-server state=started
+
