--- a/EPC/ws.cfg
+++ b/EPC/ws.cfg
@@ -1,7 +1,7 @@
 frontend ws
    mode http
    timeout client 10s
-   bind 192.168.1.8:80
+   bind *:80
    default_backend wsbackend
 
 backend wsbackend
