--- a/EPC/ws.cfg
+++ b/EPC/ws.cfg
@@ -2,6 +2,7 @@ frontend ws
    mode http
    timeout client 10s
    bind *:3001
+   bind *:443 sslr crt /projeto/ansible/EPC/cert/cert.pem
    default_backend wsbackend
 
 backend wsbackend
