--- a/EPC/ws.cfg
+++ b/EPC/ws.cfg
@@ -1,8 +1,8 @@
 frontend ws
    mode http
    timeout client 10s
-   bind *:80
-   bind *:443 ssl crt /projeto/ansible/EPC/cert/key.pem
+   bind *:3001
+   # bind *:443 ssl crt /projeto/ansible/EPC/cert/key.pem
    default_backend wsbackend
 
 backend wsbackend
