--- a/EPC/package.json
+++ b/EPC/package.json
@@ -11,6 +11,7 @@
     "http": "^0.0.1-security",
     "socket.io": "^4.1.2",
     "uuid": "^8.3.2",
+    "websocket": "^1.0.34",
     "ws": "^7.5.1"
   }
 }
